<resources>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="ga_trackingId">UA-24491297-3</string>
    <string name="app_name">扇贝单词</string>
    <string name="hello_world">Hello world!</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="domain">www.shanbay.com</string>
    <string name="shanbay">扇贝网</string>
    <string name="shanbay_words">扇贝单词</string>
    <string name="shanbay_reader">扇贝读书</string>
    <string name="shanbay_news">扇贝新闻</string>
    <string name="shanbay_sentence">扇贝炼句</string>
    <string name="need_install">你需要安装最新版的%s</string>
    <string name="install">安装</string>
    <string name="common_hint">我要说点什么</string>
    <string name="please_wait">请稍候…</string>
    <string name="back_home">返回主页</string>
    <string name="loading_more">正在加载</string>
    <string name="label_checkin_diary">打卡日记</string>
    <string name="short_message_reply">短信回复</string>
    <string name="checkin_calendar">打卡日历</string>
    <string name="checkin_new_comment">评论打卡</string>
    <string name="checkin_favor_avatra">喜欢列表</string>
    <string name="short_message_new">新建短信</string>
    <string name="name_new_feedback">新反馈</string>
    <string name="name_message">消息</string>
    <string name="name_checkin">扇贝打卡</string>
    <string name="name_signup">注册扇贝网</string>
    <string name="label_login">登录</string>
    <string name="signup">注册</string>
    <string name="login">登录</string>
    <string name="label_username">用户名：</string>
    <string name="label_password">密码：</string>
    <string name="label_payment">充值</string>
    <string name="label_password_repeat">确认密码：</string>
    <string name="label_email">Email：</string>
    <string name="label_forget">忘记密码？</string>
    <string name="link_forget">http://www.shanbay.com/accounts/password/reset/</string>
    <string name="msg_empty_username">用户名不能为空</string>
    <string name="msg_empty_psw">密码不能为空</string>
    <string name="msg_empty_email">Email 不能为空</string>
    <string name="msg_psw_not_match">密码不一致</string>
    <string name="msg_signup_success">注册成功</string>
    <string name="msg_login_success">登录成功</string>
    <string name="label_remember_password">记住密码</string>
    <string name="logout">退出</string>
    <string name="msg_logout">确定要退出吗?</string>
    <string name="name_more">更多</string>
    <string name="header_account">帐户</string>
    <string name="label_setting">设置</string>
    <string name="label_feedback">反馈</string>
    <string name="label_coins">贝壳</string>
    <string name="label_exit">退出帐号</string>
    <string name="label_test_media">测试音频</string>
    <string name="label_mode">模式</string>
    <string name="label_top_up">充值</string>
    <string name="label_broadcast">广播</string>
    <string name="header_recommend">推荐</string>
    <string name="label_pwd">密码重置</string>
    <string name="label_mail">修改邮箱</string>
    <string name="label_nickname">修改昵称</string>
    <string name="feedback_content_label">反馈内容</string>
    <string name="feedback_time_label">反馈时间</string>
    <string name="feedback_reply_hint">回复管理员…</string>
    <string name="feedback">反馈</string>
    <string name="reminder">通知</string>
    <string name="short_message">短信</string>
    <string name="feedback_success">反馈成功</string>
    <string name="feedback_fail">反馈失败</string>
    <string name="me">我</string>
    <string name="admin">管理员</string>
    <string name="feedback_time">反馈时间</string>
    <string name="feedback_content">反馈内容</string>
    <string name="reply_time">回复时间</string>
    <string name="reply_fail">回复失败</string>
    <string name="test_success">测试成功</string>
    <string name="test_fail">测试失败</string>
    <string name="reply_success">回复成功</string>
    <string name="feedback_send">发送</string>
    <string name="feedback_something">我想反馈些什么......</string>
    <string name="feedback_empty">请写点什么吧</string>
    <string name="reply_empty">请输入回复内容</string>
    <string name="comment_empty">请输入评论内容</string>
    <string name="checkin_diary_empty">请写点什么吧</string>
    <string name="checkin_diary_not_changed">没有任何修改</string>
    <string name="feedback_notice_one">收到反馈后，管理员一般会在第二天回复您。</string>
    <string name="feedback_notice_two">扇贝网为超过100万用户提供背单词和英语阅读服务，登录扇贝网，加入社区，发现更多</string>
    <string name="broadcast">广播</string>
    <string name="sms_title">发短信</string>
    <string name="sms_recipient_empty">请输入收件人</string>
    <string name="sms_subject_empty">请输入主题</string>
    <string name="sms_content_empty">请输入内容</string>
    <string name="sms_send_success">发送成功</string>
    <string name="sms_send_fail">发送失败</string>
    <string name="msg_server_failure">服务器故障，请在微博上了解我们的进度 @扇贝网</string>
    <string name="msg_network_failure">网络故障，请连接网络后重试…</string>
    <string name="msg_connect_exception">连接出错，请检查网络或重试!</string>
    <string name="msp_confirm_install_hint">安装提示</string>
    <string name="msp_confirm_install">"为保证您的交易安全，需要您安装移动快捷支付，才能进行付款。
点击确定，立即安装。"</string>
    <string name="msp_download_update">正在下载安全支付服务更新</string>
    <string name="msp_check_update">正在检测安全支付服务版本</string>
    <string name="msp_check_sign_failed">您的订单信息已被非法篡改。</string>
    <string name="msp_hint">提示</string>
    <string name="msp_pay_success">支付成功。交易状态码：%s</string>
    <string name="msp_pay_fail">支付失败。交易状态码：%s</string>
    <string name="msp_not_install">支付服务未安装无法完成支付。</string>
    <string name="fail_query_word">查词失败，请重试。</string>
    <string name="choice_favorite">点击选择喜欢的书</string>
    <string name="sum_coins">贝壳总数</string>
    <string name="user_balance">您的账户余额为&lt;font color=#209e85> %s贝壳 &lt;/font></string>
    <string name="user_balance_count">您的账户余额</string>
    <string name="charge_success">恭喜您成功充值 %s 贝壳</string>
    <string name="name_being_recharge">正在充值</string>
    <string name="checkin_diary_notice">请输入您想说的话....</string>
    <string name="share_success">分享成功</string>
    <string name="label_make_up">补打卡</string>
    <string name="no_checkin_hint">您还没有打卡信息</string>
    <string name="no_checkin_detail">您每天学习完当天的任务后，会有一次打卡的机会，打卡时可以记录你的心情日志，坚持打卡会帮助你更好地学习。</string>
    <string name="common_label_num_today_sentence">炼句</string>
    <string name="common_label_num_today_read">阅读文章</string>
    <string name="common_label_num_today_bdc">学习单词</string>
    <string name="common_label_num_today_listen">完成听力</string>
    <string name="common_label_num_checkin_days">打卡天数</string>
    <string name="common_label_checkin">打 卡</string>
    <string name="common_label_used_time">分钟</string>
    <string name="common_unable_checkin_hint">你现在还不能打卡请先完成今日任务</string>
    <string name="common_unable_checkin_plan">下面是您今天未完成任务，点击图标完成学习</string>
    <string name="common_checkin_learn">继续学习</string>
    <string name="common_finish_task">你已经完成了今天的全部任务</string>
    <string name="common_finish_task_great">非常棒！</string>
    <string name="common_finish_choice_test_big">恭喜你！</string>
    <string name="common_finish_choice_test">测试已完成</string>
    <string name="common_share_blances">奖励10贝壳</string>
    <string name="share_weixin_description">英语很难学，我们有方法。坚持不容易，请一道前行。扇贝网。</string>
    <string name="share_weibo_description">英语很难学，我们有方法；坚持不容易，请一道前行；用一段时光，感动自己，这里是扇贝网。</string>
    <string name="share_weibo_copywriter">英语很难学，我们有方法；坚持不容易，请一道前行；用一段时光，感动自己，这里是 #扇贝网#</string>
    <string name="short_message_reply_hint">回复短信</string>
    <string name="receive_badge">领取徽章</string>
    <string name="need_to_learn">要学</string>
    <string name="learning">已学</string>
    <string name="stats_title_1">进步曲线</string>
    <string name="stats_title_2">文章数</string>
    <string name="stats_title_3">阅读量</string>
    <string name="stats_title_4">激活单词数</string>
    <string name="review_everyday">每日复习盘点</string>
    <string name="num_total">单词总数</string>
    <string name="num_master">已经掌握/简单词</string>
    <string name="num_familiar">正在学习</string>
    <string name="num_fresh">新词</string>
    <string name="share_invite_weibo">我真觉得扇贝网是一个学英语的好地方，不仅可以背单词，还能在读文章的时候告诉我哪些词是我以前学过的，哪些词是我要学的，一个人学不下来的话还可以加入小组互相监督，效果真的很好。推荐你也来试试～</string>
    <string name="online_store">扇贝网店</string>
    <string name="label_recommend">扇贝应用</string>
    <string name="share">分享</string>
    <string name="actionbar_weibo_share"> 微博</string>
    <string name="actionbar_weixin_share"> 朋友圈</string>
    <string name="actionbar_weixin_friends_share"> 好友</string>
    <string name="actionbar_copy_url"> 复制链接</string>
    <string name="umeng_common_action_info_exist">The app is already in downloading list.</string>
    <string name="umeng_common_info_interrupt">dowload interrupted.</string>
    <string name="umeng_common_action_pause">Pause</string>
    <string name="umeng_common_action_continue">Continue</string>
    <string name="umeng_common_action_cancel">Cancel</string>
    <string name="umeng_common_download_notification_prefix">Downloading:</string>
    <string name="umeng_common_start_download_notification">Download start.</string>
    <string name="umeng_common_start_patch_notification">Patch start.</string>
    <string name="umeng_common_network_break_alert">Please make sure you are connected to internet, download failed</string>
    <string name="umeng_common_download_failed">Download Failed!</string>
    <string name="umeng_common_download_finish">Download finished,click to install it.</string>
    <string name="umeng_common_patch_finish">Patch finished,click to install it.</string>
    <string name="UMBreak_Network">Please make sure you are connected to internet,update failed</string>
    <string name="UMUpdateTitle">New version found</string>
    <string name="UMNewVersion">Latest version:</string>
    <string name="UMUpdateContent">Update Content</string>
    <string name="UMUpdateSize">Update size:</string>
    <string name="UMTargetSize">Target size:</string>
    <string name="UMGprsCondition">(Warning: Not WIFI Condition)</string>
    <string name="UMUpdateNow">Update now</string>
    <string name="UMNotNow">Not now</string>
    <string name="UMIgnore">Ingore this</string>
    <string name="rank_index">排名</string>
    <string name="rank_group">小组</string>
    <string name="rank_points">总成长值</string>
    <string name="badge_avatar">徽章</string>
    <string name="badge_title">徽章名称</string>
    <string name="badge_count">小组成员获得情况</string>
    <string name="btn_login">登录</string>
    <string name="btn_signup">注册</string>
    <string name="label_checkin">打卡</string>
    <string name="editor_common_hint">我要说点什么</string>
    <string name="one_example_hint">例句</string>
    <string name="checkin_days">打卡天数</string>
    <string name="learning_words_count">学习单词</string>
    <string name="learning_reader_count">阅读文章</string>
    <string name="learning_sentence_count">炼句</string>
    <string name="learning_cost_time">分钟</string>
    <string name="query_add_word">添加单词</string>
    <string name="query_forget_word">我忘了</string>
    <string name="label_experience_intro">为你提供词根、柯林斯、拼写等英语学习体验</string>
    <string name="label_experience">体验一下</string>
    <string name="label_congratulation">非常棒!</string>
    <string name="label_exp_finished">你已经完成了扇贝单词的学习体验</string>
    <string name="label_exp_share">可以和好友分享下哦</string>
</resources>