<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/icon_share" android:id="@id/action_share" android:title="@string/share" app:showAsAction="ifRoom">
        <menu>
            <item android:icon="@drawable/icon_share_weixin" android:id="@id/share_to_contract" android:title="@string/actionbar_weixin_friends_share" app:showAsAction="never" />
            <item android:icon="@drawable/icon_share_pengyouquan" android:id="@id/share_to_zone" android:title="@string/actionbar_weixin_share" app:showAsAction="never" />
            <item android:icon="@drawable/icon_share_weibo" android:id="@id/share_to_weibo" android:title="@string/actionbar_weibo_share" app:showAsAction="never" />
            <item android:icon="@drawable/icon_link" android:id="@id/copy_link" android:title="@string/actionbar_copy_url" app:showAsAction="never" />
        </menu>
    </item>
</menu>