<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:background="@color/community_group_rank_title" android:paddingTop="@dimen/padding2" android:paddingBottom="@dimen/padding2" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/textsize13" android:textColor="@color/common_text" android:gravity="center" android:paddingLeft="@dimen/padding1" android:layout_width="@dimen/width20" android:layout_height="wrap_content" android:layout_marginRight="@dimen/margin13" android:text="@string/badge_avatar" />
    <TextView android:textSize="@dimen/textsize13" android:textColor="@color/common_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/badge_title" />
    <TextView android:textSize="@dimen/textsize13" android:textColor="@color/common_text" android:gravity="right" android:paddingRight="@dimen/padding4" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/badge_count" />
</LinearLayout>