<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_gravity="top" android:orientation="vertical" android:paddingBottom="@dimen/padding16" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/margin7">
        <LinearLayout android:orientation="vertical" android:background="@drawable/btn_item_normal" android:padding="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:id="@id/user_data" android:paddingTop="@dimen/padding5" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="1.0">
                <TextView android:textSize="@dimen/small_text_size" android:textColor="@color/common_text" android:gravity="center" android:id="@id/text_checkindays" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="0.2" />
                <TextView android:textSize="@dimen/small_text_size" android:textColor="@color/common_text" android:gravity="center" android:id="@id/text_word_count" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="0.2" />
                <TextView android:textColor="@color/common_text" android:gravity="center" android:id="@id/text_reader" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="0.2" />
                <TextView android:textSize="@dimen/small_text_size" android:textColor="@color/common_text" android:gravity="center" android:id="@id/text_sentence" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="0.2" />
                <TextView android:textSize="@dimen/small_text_size" android:textColor="@color/common_text" android:gravity="center" android:id="@id/text_cost_time" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="0.2" />
            </LinearLayout>
            <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="1.0">
                <TextView android:textSize="@dimen/tiny_text_size" android:textColor="@color/common_text" android:gravity="center" android:paddingLeft="@dimen/padding2" android:paddingRight="@dimen/padding2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/checkin_days" android:layout_weight="0.2" />
                <TextView android:textSize="@dimen/tiny_text_size" android:textColor="@color/common_text" android:gravity="center" android:paddingLeft="@dimen/padding2" android:paddingRight="@dimen/padding2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/learning_words_count" android:layout_weight="0.2" />
                <TextView android:textSize="@dimen/tiny_text_size" android:textColor="@color/common_text" android:gravity="center" android:paddingLeft="@dimen/padding2" android:paddingRight="@dimen/padding2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/learning_reader_count" android:layout_weight="0.2" />
                <TextView android:textSize="@dimen/tiny_text_size" android:textColor="@color/common_text" android:gravity="center" android:paddingLeft="@dimen/padding2" android:paddingRight="@dimen/padding2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/learning_sentence_count" android:layout_weight="0.2" />
                <TextView android:textSize="@dimen/tiny_text_size" android:textColor="@color/common_text" android:gravity="center" android:paddingLeft="@dimen/padding2" android:paddingRight="@dimen/padding2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/learning_cost_time" android:layout_weight="0.2" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/activity_vertical_margin">
            <EditText android:scrollbarStyle="insideOverlay" android:textSize="@dimen/textsize14" android:gravity="top" android:id="@id/content" android:background="@android:color/white" android:paddingLeft="@dimen/padding10" android:paddingTop="@dimen/padding10" android:paddingRight="@dimen/padding10" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/editor_common_hint" android:minLines="15" android:inputType="textMultiLine" />
            <Button android:layout_gravity="center_horizontal" android:id="@id/button_checkin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="26.329987dip" android:text="@string/label_checkin" android:onClick="checkin" style="@style/SBBaseButton.Normal" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>