<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="#99232323" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@drawable/umeng_update_dialog_bg" android:layout_width="@dimen/width140" android:layout_height="wrap_content" android:layout_centerInParent="true">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="@dimen/height20">
            <ImageView android:id="@id/umeng_update_wifi_indicator" android:layout_width="@dimen/width15" android:layout_height="@dimen/height15" android:layout_marginLeft="@dimen/margin5" android:src="@drawable/umeng_update_wifi_disable" android:layout_centerVertical="true" android:contentDescription="@string/UMGprsCondition" />
            <TextView android:textAppearance="?android:textAppearanceLarge" android:textColor="#ff63c2ff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/UMUpdateTitle" android:layout_centerInParent="true" />
            <Button android:id="@id/umeng_update_id_close" android:background="@drawable/umeng_update_button_close_bg_selector" android:focusable="true" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/margin5" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <View android:background="#ff2aacff" android:layout_width="fill_parent" android:layout_height="@dimen/height1" android:layout_marginLeft="@dimen/margin5" android:layout_marginRight="@dimen/margin5" />
        <ScrollView android:padding="@dimen/padding5" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textColor="#ffaaabaf" android:id="@id/umeng_update_content" android:focusable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin3" android:layout_marginTop="@dimen/margin5" android:layout_marginRight="@dimen/margin3" />
            </LinearLayout>
        </ScrollView>
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:textColor="#ffffffff" android:gravity="center" android:id="@id/umeng_update_id_ok" android:background="@drawable/umeng_update_button_ok_bg_selector" android:padding="@dimen/padding6" android:focusable="true" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="@dimen/margin3" android:text="@string/UMUpdateNow" android:layout_weight="1.0" />
            <Button android:textColor="#ffaaabaf" android:gravity="center" android:id="@id/umeng_update_id_cancel" android:background="@drawable/umeng_update_button_cancel_bg_selector" android:padding="@dimen/padding6" android:focusable="true" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="@dimen/margin3" android:text="@string/UMNotNow" android:layout_weight="1.0" />
            <Button android:textColor="#ffaaabaf" android:gravity="center" android:id="@id/umeng_update_id_ignore" android:background="@drawable/umeng_update_button_cancel_bg_selector" android:padding="@dimen/padding6" android:focusable="true" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="@dimen/margin3" android:text="@string/UMIgnore" android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>